When displaying a picture detail popup the main-div was hidden to avoid having two scrollbars. This unfortunatly resets the position on the page, and the user ends up at the top of the page when closing the popup.
Instead the body element will now have the style overflow: hidden applied when pop-up appears, and removed when the popup closes.

This  was also done for calendar items.

--- a/KinaUnaWeb/wwwroot/css/site.css
+++ b/KinaUnaWeb/wwwroot/css/site.css
@@ -3492,7 +3492,7 @@ noUi-handle:after, .noUi-handle:before {
     z-index: 1051;
     padding: 1rem 1rem;
     margin: -1rem -1rem -1rem auto;
-    font-size: 1.5rem;
+    font-size: 2.5rem;
 }
 
 .item-details-close-button-full-screen {
